[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1a"
path = "src/day1a.rs"
[[bin]]
name = "day1b"
path = "src/day1b.rs"
[[bin]]
name = "day2a"
path = "src/day2a.rs"
[[bin]]
name = "day2b"
path = "src/day2b.rs"
[[bin]]
name = "day3a"
path = "src/day3a.rs"
[[bin]]
name = "day3b"
path = "src/day3b.rs"
[[bin]]
name = "day4a"
path = "src/day4a.rs"
[[bin]]
name = "day4b"
path = "src/day4b.rs"
[[bin]]
name = "day5a"
path = "src/day5a.rs"
[[bin]]
name = "day5b"
path = "src/day5b.rs"
