[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1a"
path = "src/day1a.rs"
[[bin]]
name = "day1b"
path = "src/day1b.rs"
[[bin]]
name = "day2a"
path = "src/day2a.rs"
[[bin]]
name = "day2b"
path = "src/day2b.rs"
[[bin]]
name = "day3a"
path = "src/day3a.rs"
[[bin]]
name = "day3b"
path = "src/day3b.rs"
[[bin]]
name = "day4a"
path = "src/day4a.rs"
[[bin]]
name = "day4b"
path = "src/day4b.rs"
[[bin]]
name = "day5a"
path = "src/day5a.rs"
[[bin]]
name = "day5b"
path = "src/day5b.rs"
[[bin]]
name = "day6a"
path = "src/day6a.rs"
[[bin]]
name = "day6b"
path = "src/day6b.rs"
[[bin]]
name = "day7a"
path = "src/day7a.rs"
[[bin]]
name = "day7b"
path = "src/day7b.rs"
[[bin]]
name = "day8a"
path = "src/day8a.rs"
[[bin]]
name = "day8b"
path = "src/day8b.rs"
[[bin]]
name = "day9a"
path = "src/day9a.rs"
[[bin]]
name = "day9b"
path = "src/day9b.rs"
[[bin]]
name = "day10a"
path = "src/day10a.rs"
[[bin]]
name = "day10b"
path = "src/day10b.rs"
[[bin]]
name = "day11a"
path = "src/day11a.rs"
[[bin]]
name = "day11b"
path = "src/day11b.rs"
[[bin]]
name = "day12a"
path = "src/day12a.rs"
[[bin]]
name = "day12b"
path = "src/day12b.rs"
[[bin]]
name = "day13a"
path = "src/day13a.rs"
[[bin]]
name = "day13b"
path = "src/day13b.rs"
